[package]
name = "adevent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "day_2022_11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day_2022_01"
path = "2022/day_01/main.rs"

[[bin]]
name = "day_2022_02"
path = "2022/day_02/main.rs"

[[bin]]
name = "day_2022_03"
path = "2022/day_03/main.rs"

[[bin]]
name = "day_2022_04"
path = "2022/day_04/main.rs"

[[bin]]
name = "day_2022_05"
path = "2022/day_05/main.rs"

[[bin]]
name = "day_2022_06"
path = "2022/day_06/main.rs"

[[bin]]
name = "day_2022_07"
path = "2022/day_07/main.rs"

[[bin]]
name = "day_2022_08"
path = "2022/day_08/main.rs"

[[bin]]
name = "day_2022_09"
path = "2022/day_09/main.rs"

[[bin]]
name = "day_2022_10"
path = "2022/day_10/main.rs"

[[bin]]
name = "day_2022_11"
path = "2022/day_11/main.rs"
